--- a/config/zones/US-CAL-CISO.yaml
+++ b/config/zones/US-CAL-CISO.yaml
@@ -493,11 +493,10 @@ fallbackZoneMixes:
         wind: 0.09338823901382434
 parsers:
   consumption: US_CA.fetch_consumption
-  consumptionForecast: EIA.fetch_consumption_forecast
+  consumptionForecast: US_CA.fetch_consumption_forecast
   production: US_CA.fetch_production
   productionCapacity: EIA.fetch_production_capacity
   productionPerModeForecast: US_CA.fetch_wind_solar_forecasts
-  generationForecast: US_CA.fetch_generation_forecast
 region: Americas
 sources:
   INCER ACV:
