--- a/config/zones/FI.yaml
+++ b/config/zones/FI.yaml
@@ -53,6 +53,9 @@ capacity:
     - datetime: '2024-11-17'
       source: fingrid.fi
       value: 1109
+    - datetime: '2025-02-10'
+      source: fingrid.fi
+      value: 1256
   unknown:
     - datetime: '2023-01-01'
       source: entsoe.eu
