changed method name in US_NY
the data that is being fetch is actually load forecast (corresponding to consumption, and not production)

--- a/config/zones/US-NY-NYIS.yaml
+++ b/config/zones/US-NY-NYIS.yaml
@@ -431,10 +431,9 @@ fallbackZoneMixes:
         wind: 0.03966033748337813
 parsers:
   consumption: EIA.fetch_consumption
-  consumptionForecast: EIA.fetch_consumption_forecast
+  consumptionForecast: US_NY.fetch_consumption_forecast
   production: US_NY.fetch_production
   productionCapacity: EIA.fetch_production_capacity
-  generationForecast: US_NY.fetch_generation_forecast
 region: Americas
 sources:
   INCER ACV:
