--- a/config/zones/BB.yaml
+++ b/config/zones/BB.yaml
@@ -1,6 +1,35 @@
+capacity:
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 30.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 50.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 60.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 70.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 260.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 300.0
+  wind:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
 country: BB
 parsers:
   consumption: BB.fetch_consumption
   production: BB.fetch_production
+  productionCapacity: EMBER.fetch_production_capacity
 region: Americas
 timezone: America/Barbados
