--- a/config/zones/FK.yaml
+++ b/config/zones/FK.yaml
@@ -1,3 +1,18 @@
+capacity:
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 10.0
+  wind:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
 country: FK
+parsers:
+  productionCapacity: EMBER.fetch_production_capacity
 region: Americas
 timezone: Atlantic/Stanley
