--- a/config/zones/MT.yaml
+++ b/config/zones/MT.yaml
@@ -3,6 +3,45 @@ bounding_box:
     - 35.301214911
   - - 15.067149285000113
     - 36.5755882830001
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 360.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 110.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 130.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 160.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 190.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 210.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 220.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 230.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 190.0
+  wind:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
 country: MT
 emissionFactors:
   direct:
@@ -88,6 +127,8 @@ emissionFactors:
       source: UNECE 2022, WindEurope "Wind energy in Europe, 2021 Statistics and the
         outlook for 2022-2026" Wind Europe Proceedings (2021)
       value: 12.62
+parsers:
+  productionCapacity: EMBER.fetch_production_capacity
 region: Europe
 sources:
   EU-ETS, ENTSO-E 2021:
