--- a/config/zones/PG.yaml
+++ b/config/zones/PG.yaml
@@ -3,6 +3,41 @@ bounding_box:
     - -12.135945702701854
   - - 156.43375933759333
     - -0.8464601337314619
+capacity:
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 20.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 150.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 160.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 210.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 220.0
+  hydro:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 260.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 330.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 540.0
 country: PG
+parsers:
+  productionCapacity: EMBER.fetch_production_capacity
 region: Oceania
 timezone: Pacific/Port_Moresby
