--- a/config/zones/PR.yaml
+++ b/config/zones/PR.yaml
@@ -4,18 +4,69 @@ bounding_box:
   - - -64.74461829299992
     - 19.022772528000033
 capacity:
-  battery storage: 30.5
-  biomass: 4.8
-  coal: 510
-  gas: 1421.6
-  geothermal: 0
-  hydro: 98.1
-  hydro storage: 0
-  nuclear: 0
-  oil: 4047.1
-  solar: 157.7
-  unknown: 0
-  wind: 125.2
+  biomass:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 0.0
+  gas:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 1330.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 1350.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 1370.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 1380.0
+  hydro:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
+  solar:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 300.0
+    - datetime: '2018-01-01'
+      source: Ember, Yearly electricity data
+      value: 310.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 340.0
+    - datetime: '2020-01-01'
+      source: Ember, Yearly electricity data
+      value: 380.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 490.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 640.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 960.0
+  unknown:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 3470.0
+    - datetime: '2019-01-01'
+      source: Ember, Yearly electricity data
+      value: 3610.0
+    - datetime: '2021-01-01'
+      source: Ember, Yearly electricity data
+      value: 3620.0
+    - datetime: '2022-01-01'
+      source: Ember, Yearly electricity data
+      value: 3660.0
+    - datetime: '2023-01-01'
+      source: Ember, Yearly electricity data
+      value: 3760.0
+  wind:
+    - datetime: '2017-01-01'
+      source: Ember, Yearly electricity data
+      value: 100.0
 contributors:
   - q--
   - systemcatch
@@ -248,6 +299,7 @@ isRenewable:
     value: 1
 parsers:
   production: US_PREPA.fetch_production
+  productionCapacity: EMBER.fetch_production_capacity
 region: Americas
 sources:
   eGrid 2020:
